# spin

./: .gitmodules  Cargo.toml  build.rs
.github/workflows/: release.yml
crates/abi-conformance/: Cargo.toml
crates/adapter/: Cargo.toml  build.rs
crates/adapter/src/: lib.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: io.rs  store.rs  wasi_2023_10_18.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/factor-key-value/src/: host.rs
crates/factor-outbound-http/: Cargo.toml
crates/factor-outbound-http/src/: lib.rs  wasi.rs
crates/factor-outbound-mysql/src/: host.rs
crates/factor-outbound-pg/src/: host.rs
crates/factor-wasi/src/: io.rs  lib.rs  wasi_2023_10_18.rs
crates/factors-executor/: Cargo.toml
crates/factors-executor/src/: lib.rs
crates/http/: Cargo.toml
crates/http/benches/spin-http-benchmark/: Cargo.toml
crates/http/benches/spin-http-benchmark/src/: lib.rs
crates/http/src/: trigger.rs
crates/http/tests/rust-http-test/: Cargo.toml
crates/http/tests/rust-http-test/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/local/: mod.rs
crates/manifest/src/: lib.rs
crates/outbound-http/: Cargo.toml
crates/outbound-mysql/src/: lib.rs
crates/outbound-pg/: Cargo.toml
crates/outbound-pg/src/: lib.rs
crates/outbound-redis/: Cargo.toml
crates/outbound-redis/src/: lib.rs
crates/publish/: Cargo.toml
crates/redis/: Cargo.toml
crates/redis/tests/rust/: Cargo.toml
crates/redis/tests/rust/src/: lib.rs
crates/templates/: Cargo.toml
crates/templates/src/: custom_filters.rs
crates/templates/tests/filters/clappy/: Cargo.toml
crates/templates/tests/filters/studly-caps/: Cargo.toml
crates/templates/wit/: custom-filter.wit
crates/trigger/: Cargo.toml
crates/trigger-http/src/: handler.rs  lib.rs  server.rs  wasi.rs
crates/trigger/src/: lib.rs  locked.rs
crates/wasi-cloud/: Cargo.toml
crates/wasi-cloud/src/: http.rs  keyvalue.rs  lib.rs  messaging.rs  poll.rs  streams.rs
crates/wasi-messaging/: Cargo.toml
crates/wasi-messaging/src/: lib.rs
crates/world/src/: lib.rs
examples/config-rust/: Cargo.toml
examples/http-rust/: Cargo.toml
examples/http-rust-oubound-http/: Cargo.toml
examples/http-rust-outbound-http/: Cargo.toml
examples/redis-rust/: Cargo.toml
examples/rust-outbound-pg/: Cargo.toml
examples/rust-outbound-redis/: Cargo.toml
examples/spin-timer/: Cargo.toml
examples/spin-timer/example/: Cargo.toml
examples/spin-timer/example/src/: lib.rs
examples/spin-wagi-http/http-rust/: Cargo.toml
examples/wasi-http-rust-async/: Cargo.toml
examples/wasi-http-rust-async/src/: lib.rs
examples/wasi-keyvalue-rust/: Cargo.toml  spin.toml
examples/wasi-keyvalue-rust/src/: lib.rs
examples/wasi-messaging-rust/: Cargo.toml  spin.toml
examples/wasi-messaging-rust/src/: lib.rs
http/: Cargo.toml
http/src/: lib.rs
sdk/go/: Makefile  go.mod  integration_test.go
sdk/go/examples/http-tinygo/: go.mod
sdk/go/examples/http-tinygo-outbound-http/outbound-http-to-same-app/: go.mod
sdk/go/examples/http-tinygo-outbound-http/tinygo-hello/: go.mod
sdk/go/examples/tinygo-key-value/: go.mod
sdk/go/examples/tinygo-llm/: go.mod
sdk/go/examples/tinygo-outbound-mysql/: go.mod
sdk/go/examples/tinygo-outbound-pg/: go.mod
sdk/go/examples/tinygo-outbound-redis/: go.mod
sdk/go/examples/tinygo-redis/: go.mod
sdk/go/examples/tinygo-sqlite/: go.mod
sdk/rust/: Cargo.toml
sdk/rust/macro/: Cargo.toml
sdk/rust/macro/src/: lib.rs
sdk/rust/src/: lib.rs  outbound_http.rs
src/commands/: up.rs
templates/http-rust/content/: Cargo.toml
templates/redis-rust/content/: Cargo.toml
tests/: integration.rs
tests/http/headers-env-routes-test/: Cargo.toml
tests/http/headers-env-routes-test/src/: lib.rs
tests/http/simple-spin-rust/: Cargo.toml
tests/http/wasi-http-rust-0.2.0-rc-2023-12-05/src/: lib.rs
wit/ephemeral/: outbound-pg.wit  outbound-redis.wit  spin-config.wit  spin-redis.wit  wasi-outbound-http.wit
wit/preview2/: spin.wit  worlds.wit
wit/wasi-http/: types-keyvalue.wit
