[package]
name = "spin-abi-conformance"
version = "0.5.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.82"
wit-bindgen-gen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "4934194d9bcb420df68d2a18598c27dd276c1263" }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
tempfile = "3.3.0"
cap-std = "0.25.2"
toml = "0.5.9"
