[package]
name = "spin-adapter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rust = { path = "../../../wit-bindgen-old/crates/rust-wasm", default-features = false, features = ["macros"] }
wit-bindgen-real = { package = "wit-bindgen", path = "../../../wit-bindgen/crates/guest-rust", default-features = false, features = ["macros"] }
