[package]
name = "spin-config"
version = "0.2.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea" }

[dev-dependencies]
toml = "0.5"
