[package]
name = "spin-config"
version = "0.2.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
once_cell = "1"
spin-app = { path = "../app" }
spin-core = { path = "../core" }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dependencies.wit-bindgen-gen-host-wasmtime-rust]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "4934194d9bcb420df68d2a18598c27dd276c1263"

[dev-dependencies]
toml = "0.5"
