[package]
name = "spin-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }