[package]
name = "spin-engine"
version = "0.2.0"
edition = "2021"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
dirs = "4.0"
sanitize-filename = "0.3.0"
spin-config = { path = "../config" }
spin-manifest = { path = "../manifest" }
tempfile = "3.3.0"
tokio = { version = "1.10.0", features = [ "fs" ] }
tracing = { version = "0.1", features = [ "log" ] }
tracing-futures = "0.2"
wasi-cap-std-sync = "0.38.0"
wasi-common = "0.38.0"
wasmtime = "0.38.0"
wasmtime-wasi = "0.38.0"
cap-std = "0.24.1"

[dev-dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea" }
