[package]
name = "outbound-http"
version = "0.2.0"
edition = "2021"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]

[lib]
doctest = false

[dependencies]
anyhow  = "1.0"
http = "0.2"
reqwest = "0.11"
spin-app = { path = "../app" }
spin-core = { path = "../core" }
tracing = { version = "0.1", features = [ "log" ] }
url = "2.2.1"

[dependencies.wit-bindgen-gen-host-wasmtime-rust]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "4934194d9bcb420df68d2a18598c27dd276c1263"
