[package]
name = "outbound-pg"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
spin-core = { path = "../core" }
tokio = { version = "1", features = [ "rt-multi-thread" ] }
tokio-postgres = { version = "0.7.7" }
tracing = { version = "0.1", features = [ "log" ] }

[dependencies.wit-bindgen-host-wasmtime-rust]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "4934194d9bcb420df68d2a18598c27dd276c1263"
