[package]
name = "outbound-redis"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
redis = { version = "0.21", features = [ "tokio-comp" ] }
spin-engine = { path = "../engine" }
spin-manifest = { path = "../manifest" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea" }
