[package]
name = "spin-redis-engine"
version = "0.2.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = "1"
spin-app = { path = "../app" }
spin-core = { path = "../core" }
spin-trigger = { path = "../trigger" }
redis = { version = "0.21", features = [ "tokio-comp" ] }
tracing = { version = "0.1", features = [ "log" ] }

[dependencies.wit-bindgen-gen-host-wasmtime-rust]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "4934194d9bcb420df68d2a18598c27dd276c1263"

[dev-dependencies]
spin-testing = { path = "../testing" }
