[package]
name = "spin-timer"
version = "0.1.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
log = { version = "0.4", default-features = false }
spin-engine = { path = "../../crates/engine" }
spin-manifest = { path = "../../crates/manifest" }
spin-trigger = { path = "../../crates/trigger" }
tokio = { version = "1.14", features = [ "full" ] }
tracing = { version = "0.1", features = [ "log" ] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3.7", features = [ "env-filter" ] }
wasi-common = "0.38.0"
wasmtime = "0.38.0"
wasmtime-wasi = "0.38.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea" }
