[package]
name = "spin-timer"
version = "0.1.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
spin-core = { path = "../../crates/core" }
tokio = { version = "1.14", features = [ "full" ] }
tracing = { version = "0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.3.7", features = [ "env-filter" ] }

[dependencies.wit-bindgen-gen-host-wasmtime-rust]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "4934194d9bcb420df68d2a18598c27dd276c1263"
