[package]
edition = "2021"
name = "spin-sdk"
version = "0.4.0"

[lib]
name = "spin_sdk"

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-macro = {path = "macro"}
wasi-experimental-http = { git = "https://github.com/deislabs/wasi-experimental-http", rev = "a82ae3d6c85c4251b3663035febeb8100068f51d" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea" }
