[package]
edition = "2021"
name = "spin-sdk"
version = "0.5.0"

[lib]
name = "spin_sdk"

[dependencies]
anyhow = "1"
bytes = "1"
form_urlencoded = "1.0"
http = "0.2"
spin-macro = {path = "macro"}
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "4934194d9bcb420df68d2a18598c27dd276c1263" }
