[package]
edition = "2021"
name = "spin-macro"
version = "0.1.0"

[lib]
name = "spin_macro"
proc-macro = true

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ]}
wit-bindgen-gen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "4934194d9bcb420df68d2a18598c27dd276c1263" }
wit-bindgen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "4934194d9bcb420df68d2a18598c27dd276c1263" }
