[package]
name    = "env"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# The wit-bindgen-guest-rust dependency generates bindings for interfaces.
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "4934194d9bcb420df68d2a18598c27dd276c1263" }

[workspace]

# Metadata about this component.
[package.metadata.component]
name = "spinhelloworld"
