[package]
    name    = "rust"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "4934194d9bcb420df68d2a18598c27dd276c1263" }

[workspace]
